--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,10 @@ dependencies {
     compile 'io.reactivex.rxjava2:rxjava:2.1.0'
     compile 'com.github.bumptech.glide:glide:4.0.0-RC0'
     compile 'com.android.support:support-v4:25.3.1'
-    compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
+    compile 'com.android.support:cardview-v7:25.3.1'
+    compile "org.jetbrains.anko:anko-commons:0.10.1"
+
 
     annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC0'
 
